# ChatSoftware

./: .gitignore  README.md
chatClientQt/: addfrienddialog.cpp  addfrienddialog.h  addfrienddialog.ui  chat_room_client.pro  chatinfomanage.h  common.h  logindlg.cpp  logindlg.h  logindlg.ui  main.cpp  registdlg.cpp  registdlg.h  registdlg.ui  widget.cpp  widget.h  widget.ui
chatClientQt/custom/: chatmessage.h  toolboxpow.cpp
chatClientQt/net/: chatClient.cpp  chatClient.hpp  chatService.cpp  chatService.hpp  netpublic.cpp  netpublic.hpp
chatServer/: CMakeLists.txt  autobuild.sh
chatServer/include/: public.hpp
chatServer/include/server/: chatServer.hpp  chatService.hpp
chatServer/include/server/db/: db.hpp
chatServer/include/server/model/: friendModel.hpp  group.hpp  groupModel.hpp  offlineMessModel.hpp  user.hpp  userModel.hpp
chatServer/src/server/: CMakeLists.txt  chatServer.cpp  chatService.cpp  main.cpp
chatServer/src/server/db/: db.cpp
chatServer/src/server/model/: friendModel.cpp  groupModel.cpp  offlineMessModel.cpp  userModel.cpp
